--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
+    <h2>Sweet Restaurant Slaw</h2>
     <a href="./recipes/sweet-restaurant-slaw.html">Sweet Restaurant Slaw</a>
-</body>
+    <h2>Hot Dogs</h2>
+    <a href="./recipes/hotdogs.html">Hot Dogs</a>
+    <h2>Fried Eggs</h2>
+    <a href="./recipes/fried-eggs.html">Fried Eggs</a>
+  </body>
 </html>
+<!-- test comment-->
