--- a/recipes/sweet-restaurant-slaw.html
+++ b/recipes/sweet-restaurant-slaw.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Get the slaw</title>
+  </head>
+  <body>
     <h1>Sweet Restaurant Slaw</h1>
-    <img src="../images/slaw.png" alt="Slaw">
+    <img src="../images/slaw.png" alt="Slaw" />
     <h2>Description</h2>
     <p>
-        This delicious sloppy slaw is the perfect treat to any barbeque. 
-        This tastes just like the cole slaw served at popular fried chicken or 
-        fish restaurants. 
-        It's excellent with burgers or on top of BBQ'd pork sandwiches, too!!!
+      This delicious sloppy slaw is the perfect treat to any barbeque. This
+      tastes just like the cole slaw served at popular fried chicken or fish
+      restaurants. It's excellent with burgers or on top of BBQ'd pork
+      sandwiches, too!!!
     </p>
     <h2>Ingredients</h2>
-        <ul>
-            <li>slop</li>
-            <li>cabbage</li>
-            <li>Vinegar</li>
-            <li>Cheese</li>
-            <li>Sour Cream</li>
-            <li>Peppers</li>
-            <li>Onions</li>
-            <li>Little bit of beer</li>
-        </ul>
+    <ul>
+      <li>slop</li>
+      <li>cabbage</li>
+      <li>Vinegar</li>
+      <li>Cheese</li>
+      <li>Sour Cream</li>
+      <li>Peppers</li>
+      <li>Onions</li>
+      <li>Little bit of beer</li>
+    </ul>
 
     <h2>Steps</h2>
-        <ol>
-            <li>Combine the coleslaw mix and onion in a large bowl.</li>
-            <li>Whisk together the salad dressing, vegetable oil, sugar, vinegar, salt, 
-                and poppy seeds in a medium bowl; blend thoroughly. Pour dressing 
-                mixture over coleslaw mix and toss to coat. 
-                Chill at least 2 hours before serving.</li>
-            <li>Eat up man!</li>
-        </ol>
-</body>
+    <ol>
+      <li>Combine the coleslaw mix and onion in a large bowl.</li>
+      <li>
+        Whisk together the salad dressing, vegetable oil, sugar, vinegar, salt,
+        and poppy seeds in a medium bowl; blend thoroughly. Pour dressing
+        mixture over coleslaw mix and toss to coat. Chill at least 2 hours
+        before serving.
+      </li>
+      <li>Eat up man!</li>
+    </ol>
+
+    <h1><a href="../index.html">Home</a></h1>
+  </body>
 </html>
