Reduce size of images
I reduced the size of the image to not look
so gigantic.

--- a/recipes/sweet-restaurant-slaw.html
+++ b/recipes/sweet-restaurant-slaw.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Sweet Restaurant Slaw</h1>
-    <img src="../images/slaw.png" alt="Slaw" />
+    <img src="../images/slaw.png" alt="Slaw" width="300" />
     <h2>Description</h2>
     <p>
       This delicious sloppy slaw is the perfect treat to any barbeque. This
@@ -40,6 +40,8 @@
       <li>Eat up man!</li>
     </ol>
 
-    <h1><a href="../index.html">Home</a></h1>
+    <p>
+        <h3><a href="../index.html">Home</a></h3>
+    </p>
   </body>
 </html>
